0.6.1	UNRELEASED

 BUG FIXES

  * Fix memory leak in C implementation of sorted_tree_items. (Dave Borowitz)

  * Use correct path separators for named repo files. (Dave Borowitz)

 FEATURES

  * Move named file initilization to BaseRepo. (Dave Borowitz)

 TESTS

  * Add tests for sorted_tree_items and C implementation. (Dave Borowitz)

 CLEANUP

  * Clean up file headers. (Dave Borowitz)


0.6.0	2010-05-22

note: This list is most likely incomplete for 0.6.0.

 BUG FIXES
 
  * Fix ReceivePackHandler to disallow removing refs without delete-refs.
    (Dave Borowitz)

  * Deal with capabilities required by the client, even if they 
    can not be disabled in the server. (Dave Borowitz)

  * Fix trailing newlines in generated patch files.
    (Jelmer Vernooij)

  * Implement RefsContainer.__contains__. (Jelmer Vernooij)

  * Cope with \r in ref files on Windows. (
	http://github.com/jelmer/dulwich/issues/#issue/13, Jelmer Vernooij)

  * Fix GitFile breakage on Windows. (Anatoly Techtonik, #557585)

  * Support packed ref deletion with no peeled refs. (Augie Fackler)

  * Fix send pack when there is nothing to fetch. (Augie Fackler)

  * Fix fetch if no progress function is specified. (Augie Fackler)

  * Allow double-staging of files that are deleted in the index. 
    (Dave Borowitz)

  * Fix RefsContainer.add_if_new to support dangling symrefs.
    (Dave Borowitz)

  * Non-existant index files in non-bare repositories are now treated as 
    empty. (Dave Borowitz)

  * Always update ShaFile.id when the contents of the object get changed. 
    (Jelmer Vernooij)

  * Various Python2.4-compatibility fixes. (Dave Borowitz)

  * Fix thin pack handling. (Dave Borowitz)
 
 FEATURES

  * Add include-tag capability to server. (Dave Borowitz)

  * New dulwich.fastexport module that can generate fastexport 
    streams. (Jelmer Vernooij)

  * Implemented BaseRepo.__contains__. (Jelmer Vernooij)

  * Add __setitem__ to DictRefsContainer. (Dave Borowitz)
